--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jakob's Portfolio</title>
-    <link rel="stylesheet" href="general_settings.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="about_me.css">
-    <link rel="stylesheet" href="projects.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="styles/general_settings.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/about_me.css">
+    <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
