--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <ul>
                     <li><a href="#about_me_section">Über Mich</a></li>
                     <li><a href="#projects_section">Projekte</a></li>
-                    <li><a href="#more_information_section">Mehr Informationen</a></li>
+                    <li><a href="#more_information_section">Technologien</a></li>
                 </ul>
             </nav>
             <h1>Jakob Hinterleitner, <br><span style="color: var(--main-brand-color);">Webdeveloper</span></h1>
-            <p class="subheading">Als Junior Webentwickler bringe ich Kenntnisse in HTML, CSS und JavaScript mit. Ich habe bereits kleinere Projekte umgesetzt und bin stets bestrebt, meine Fähigkeiten zu erweitern. Ich freue mich darauf, in einem motivierten und dynamischen Team zu arbeiten.</p>
+            <p class="subheading">Als junger, motivierter Webentwickler bringe ich Kenntnisse in HTML, CSS und JavaScript mit. Ich habe bereits kleinere Projekte umgesetzt und bin stets bestrebt, meine Fähigkeiten zu erweitern. Ich freue mich darauf, in einem motivierten und dynamischen Team zu arbeiten.</p>
         </div>
         <div class="circle">
             <img src="images/Jakob1.jpeg" alt="">
@@ -36,7 +36,15 @@
         <img src="images/Jakob3.jpg" alt="">
         <div class="about_me_container">
             <h2>Über Mich</h2><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, officia dolor libero laboriosam adipisci optio doloremque velit pariatur mollitia saepe ipsum repudiandae possimus sunt voluptatem? Excepturi est libero vero labore quos voluptas? Doloribus asperiores quia suscipit atque ratione praesentium explicabo culpa totam illo inventore magni, tenetur natus aut earum, odit veritatis doloremque. Eos eveniet quis asperiores, tempore, accusamus architecto, quam cupiditate cum reprehenderit aut doloribus ex. Voluptatem commodi fugit laborum nobis nostrum temporibus, repudiandae voluptates architecto accusamus quos dignissimos eligendi praesentium tenetur dolorum est cupiditate minima ipsum obcaecati dolores fuga qui a aliquam similique veritatis! Minima ipsa ratione impedit commodi laudantium sapiente iste dicta numquam illo vitae veniam nam repellendus nobis voluptatibus iusto assumenda recusandae nesciunt, in eius alias magni! Quia eos libero, inventore dignissimos nihil quas iste vel culpa qui fugit quis similique ipsum ratione maiores! Nihil, officiis numquam? Fugit sint eum sequi velit laborum voluptate quo et maxime?</p>
+            <p>Hallo, mein Name ist Jakob Hinterleitner. Ich bin Softwareentwickler aus Leidenschaft. 
+                Seit einiger Zeit hat mich die Faszination der Webentwicklung gepackt und nicht mehr losgelassen. 
+                Daher möchte ich diese Tätigkeit nun auch beruflich ausüben.
+                Ich beherrsche die Grundlagen wie HTML, CSS und Javascript und habe damit schon kleinere Projekte realisiert. 
+                Auch mit server- und clientseitiger Entwicklung bin ich bereits im Laufe meiner Projektentwicklungen in Berührung gekommen. <br>
+                Was mich auszeichnet ist meine ruhige und besonnene Art, die mir auch in stressigen Situationen zu Gute kommt. 
+                Ich bin zielstrebig und habe die Fähigkeit, Aufgaben analytisch anzugehen. Außerdem bin ich sehr gesellig und humorvoll. 
+                Ich tausche mich gerne mit anderen Menschen aus und arbeite gerne in einem dynamischen Team, in dem ich meine Stärken einbringen und ständig Neues lernen kann. <br><br>
+                Ich freue mich darauf, meine Fähigkeiten und Erfahrungen in das Team einzubringen und gemeinsam spannende Projekte umzusetzen.</p>
         </div>
     </section>
     <section id="projects_section">
@@ -48,19 +56,19 @@
                 <a href="">Github-Link</a>
             </div>
             <div class="card">
-                <h3>Rodelrennen</h3>
+                <h3>Todo App</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, fugit dolorum iste explicabo nobis placeat mollitia magni corporis quis! Exercitationem distinctio odit earum, dolorum iste ipsum? Ut dolorem dolore repellendus.</p>
                 <a href="">Github-Link</a>
             </div>
             <div class="card">
-                <h3>Rodelrennen</h3>
+                <h3>Portfolio</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, fugit dolorum iste explicabo nobis placeat mollitia magni corporis quis! Exercitationem distinctio odit earum, dolorum iste ipsum? Ut dolorem dolore repellendus.</p>
                 <a href="">Github-Link</a>
             </div>
         </div>
     </section>
     <footer id="more_information_section">
-        <h2>Mehr Informationen</h2>
+        <h2>Technologien</h2>
         <div class="grid_container">
             <div id="item1" class="grid_item">
                 <img src="images/instagram-svgrepo-com.svg" alt="">
@@ -75,7 +83,10 @@
             </div>
             <div id="item3" class="grid_item">
                 <h3>Kontakt</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo excepturi sint similique dicta officia neque sit possimus rem blanditiis. Mollitia laboriosam molestiae amet accusantium voluptate.</p>
+                <p>Jakob Hinterleitner <br>
+                    Softwareentwickler <br>
+                    Ybbsitz <br>
+                    jakob21.hinterleitner@gmail.com</p>
             </div>
             <div id="item4" class="grid_item">
                 <img src="images/twitter-svgrepo-com.svg" alt="">
