--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <p class="subheading">Als junger, motivierter Webentwickler bringe ich Kenntnisse in HTML, CSS und JavaScript mit. Ich habe bereits kleinere Projekte umgesetzt und bin stets bestrebt, meine Fähigkeiten zu erweitern. Ich freue mich darauf, in einem motivierten und dynamischen Team zu arbeiten.</p>
         </div>
         <div class="circle">
-            <img src="images/Jakob1.jpeg" alt="">
+            <img src="images/Jakob1.jpeg" alt="Bild 1" class="default-image">
+            <img src="images/Jakob2.JPG" alt="Bild 2" class="hover-image">
         </div>
     </header>
     <section id="about_me_section">
@@ -52,18 +53,30 @@
         <div class="flex_container">
             <div class="card">
                 <h3>Rodelrennen</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, fugit dolorum iste explicabo nobis placeat mollitia magni corporis quis! Exercitationem distinctio odit earum, dolorum iste ipsum? Ut dolorem dolore repellendus.</p>
-                <a href="">Github-Link</a>
+                <p>Entwicklung eines Auswertungssystems für das Bodinger Rodelrennen. Das System ermöglicht die Verwaltung von Gruppen und Teilnehmer:innen 
+                    in einer SQLite-Datenbank, die Filterung nach Startnummern und das Eintragen der Zeiten. Am Ende können die Ergebnislisten 
+                    ausgedruckt werden. <br><br> Verwendete Technologien: <br> HTML, CSS, JavaScript, Fetch API, Node.js, Express und SQLite.
+                </p>
+                <a class="websiteLink" href="">Zur Website</a>
+                <a class="githubLink" href="https://github.com/JoglTech/Rodelrennen">Github-Link</a>
             </div>
             <div class="card">
                 <h3>Todo App</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, fugit dolorum iste explicabo nobis placeat mollitia magni corporis quis! Exercitationem distinctio odit earum, dolorum iste ipsum? Ut dolorem dolore repellendus.</p>
-                <a href="">Github-Link</a>
+                <p>Entwicklung einer TodoApp. Es können Todos hinzugefügt, abgehakt und entfernt werden. Der Zustand der Website wird im Local storage gespeichert.
+                    Die Website wurde responive gemacht um auch auf Smartphones gut auszusehen. Es wurde ein Manifest.json erstellt,
+                    um die Website auch als App nutzen zu können. <br><br> Verwendete Technologien: <br> HTML, CSS und JavasSript.
+                </p>
+                <a class="websiteLink" href="">Zur Website</a>
+                <a class="githubLink" href="https://github.com/JoglTech/TodoApp">Github-Link</a>
             </div>
             <div class="card">
                 <h3>Portfolio</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, fugit dolorum iste explicabo nobis placeat mollitia magni corporis quis! Exercitationem distinctio odit earum, dolorum iste ipsum? Ut dolorem dolore repellendus.</p>
-                <a href="">Github-Link</a>
+                <p>Entwicklung meines Portfolios als One-Pager. Diese Website wurde unter anderem erstellt, um mich persönlich vorzustellen und meine Erfahrungen als Webdeveloper zu präsentieren.
+                    Auch bei der Erstellung dieser Website, wurde auf Responsive Design geachtet, sodass diese auch auf kleineren Geräten wie Tablets und Smartphones gut aussieht.
+                     <br><br> Verwendete Technologien: <br> HTML, CSS und JavaScript.
+                </p>
+                <a class="websiteLink" href="">Zur Website</a>
+                <a class="githubLink" href="https://github.com/JoglTech/Portfolio">Github-Link</a>
             </div>
         </div>
     </section>
@@ -71,15 +84,15 @@
         <h2>Technologien</h2>
         <div class="grid_container">
             <div id="item1" class="grid_item">
-                <img src="images/instagram-svgrepo-com.svg" alt="">
+                <img src="images/raspberry-pi-svgrepo-com.svg" alt="">
                 <div>
-                    <h3>Instagram</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dignissimos, quae ullam expedita voluptate laboriosam.</p>
+                    <h3>Raspberry Pi</h3>
+                    <p>Ein Raspberry Pi 5 wird als Express Server für das Hosten meiner Projekte verwendet.</p>
                 </div>
             </div>
             <div id="item2" class="grid_item">
-                <img src="images/telegram-svgrepo-com.svg" alt="">
-                <h3>Telegram</h3>
+                <img src="images/node-js-svgrepo-com.svg" alt="">
+                <h3>Node.js</h3>
             </div>
             <div id="item3" class="grid_item">
                 <h3>Kontakt</h3>
@@ -89,14 +102,14 @@
                     jakob21.hinterleitner@gmail.com</p>
             </div>
             <div id="item4" class="grid_item">
-                <img src="images/twitter-svgrepo-com.svg" alt="">
-                <h3>Twitter</h3>
+                <img src="images/github-142-svgrepo-com.svg" alt="">
+                <h3>Github</h3>
             </div>
             <div id="item5" class="grid_item">
-                <img src="images/youtube-svgrepo-com.svg" alt="">
+                <img src="images/sqlite-svgrepo-com.svg" alt="">
                 <div>
-                    <h3>YouTube</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero voluptates ex consectetur. Voluptatem, cum quidem?</p>
+                    <h3>SQLite</h3>
+                    <p>Als Datenbank wurde SQLite gewählt, da diese sehr einfach zu handhaben ist.</p>
                 </div>
             </div>
         </div>
