--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/about_me.css">
     <link rel="stylesheet" href="styles/projects.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/technologies.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -22,7 +23,8 @@
                 <ul>
                     <li><a href="#about_me_section">Über Mich</a></li>
                     <li><a href="#projects_section">Projekte</a></li>
-                    <li><a href="#more_information_section">Technologien</a></li>
+                    <li><a href="#tech_section">Technologien</a></li>
+                    <li><a href="#contact_section">Kontakt</a></li>
                 </ul>
             </nav>
             <h1>Jakob Hinterleitner, <br><span style="color: var(--main-brand-color);">Webdeveloper</span></h1>
@@ -80,7 +82,7 @@
             </div>
         </div>
     </section>
-    <footer id="more_information_section">
+    <section id="tech_section">
         <h2>Technologien</h2>
         <div class="grid_container">
             <div id="item1" class="grid_item">
@@ -95,11 +97,11 @@
                 <h3>Node.js</h3>
             </div>
             <div id="item3" class="grid_item">
-                <h3>Kontakt</h3>
-                <p>Jakob Hinterleitner <br>
-                    Softwareentwickler <br>
-                    Ybbsitz <br>
-                    jakob21.hinterleitner@gmail.com</p>
+                <img src="images/vs-code-svgrepo-com.svg" alt="">
+                <div>
+                    <h3>Visual Studio Code</h3>
+                    <p>Als IDE wurde bei allen Projekten auf Visual Studio Code gesetzt, weil es durch seine Vielzahl an Erweiterungen und die gute Integration von Git überzeugt.</p>
+                </div>
             </div>
             <div id="item4" class="grid_item">
                 <img src="images/github-142-svgrepo-com.svg" alt="">
@@ -112,6 +114,15 @@
                     <p>Als Datenbank wurde SQLite gewählt, da diese sehr einfach zu handhaben ist.</p>
                 </div>
             </div>
+        </div>
+    </section>
+    <footer id="contact_section">
+        <div class="contact">
+            <h2>Kontakt</h2>
+            <p>Jakob Hinterleitner <br> 
+                Softwareentwickler <br>
+                Ybbsitz <br>
+                jakob21.hinterleitner@gmail.com</p>
         </div>
     </footer>
     <script>
