--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 Auch mit server- und clientseitiger Entwicklung bin ich bereits im Laufe meiner Projektentwicklungen in Berührung gekommen. <br>
                 Was mich auszeichnet ist meine ruhige und besonnene Art, die mir auch in stressigen Situationen zu Gute kommt. 
                 Ich bin zielstrebig und habe die Fähigkeit, Aufgaben analytisch anzugehen. Außerdem bin ich sehr gesellig und humorvoll. 
-                Ich tausche mich gerne mit anderen Menschen aus und arbeite gerne in einem dynamischen Team, in dem ich meine Stärken einbringen und ständig Neues lernen kann. <br><br>
+                Ich tausche mich gerne mit anderen Menschen aus und arbeite gerne in einem dynamischen Team, wo ich ständig Neues lernen kann. <br><br>
                 Ich freue mich darauf, meine Fähigkeiten und Erfahrungen in das Team einzubringen und gemeinsam spannende Projekte umzusetzen.</p>
         </div>
     </section>
@@ -59,7 +59,7 @@
                     in einer SQLite-Datenbank, die Filterung nach Startnummern und das Eintragen der Zeiten. Am Ende können die Ergebnislisten 
                     ausgedruckt werden. <br><br> Verwendete Technologien: <br> HTML, CSS, JavaScript, Fetch API, Node.js, Express und SQLite.
                 </p>
-                <a class="websiteLink" href="">Zur Website</a>
+                <a class="websiteLink" href="/Rodelrennen">Zur Website</a>
                 <a class="githubLink" href="https://github.com/JoglTech/Rodelrennen">Github-Link</a>
             </div>
             <div class="card">
@@ -68,7 +68,7 @@
                     Die Website wurde responive gemacht um auch auf Smartphones gut auszusehen. Es wurde ein Manifest.json erstellt,
                     um die Website auch als App nutzen zu können. <br><br> Verwendete Technologien: <br> HTML, CSS und JavasSript.
                 </p>
-                <a class="websiteLink" href="">Zur Website</a>
+                <a class="websiteLink" href="/TodoApp">Zur Website</a>
                 <a class="githubLink" href="https://github.com/JoglTech/TodoApp">Github-Link</a>
             </div>
             <div class="card">
@@ -77,7 +77,7 @@
                     Auch bei der Erstellung dieser Website, wurde auf Responsive Design geachtet, sodass diese auch auf kleineren Geräten wie Tablets und Smartphones gut aussieht.
                      <br><br> Verwendete Technologien: <br> HTML, CSS und JavaScript.
                 </p>
-                <a class="websiteLink" href="">Zur Website</a>
+                <a class="websiteLink" href="/">Zur Website</a>
                 <a class="githubLink" href="https://github.com/JoglTech/Portfolio">Github-Link</a>
             </div>
         </div>
